// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable 1`] = `
<VirtualizedTable
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
      "formatRelativeTime": [Function],
    }
  }
  rowData={
    Array [
      Object {
        "description": "description1",
        "name": "name1",
      },
      Object {
        "description": "description2",
        "name": "name2",
      },
      Object {
        "description": "description3",
        "name": "name3",
      },
    ]
  }
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={100}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={100}
  />
</VirtualizedTable>
`;

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable 2`] = `
<AutoSizer
  disableHeight={true}
  disableWidth={false}
  onResize={[Function]}
  style={Object {}}
>
  <Component />
</AutoSizer>
`;

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable 3`] = `
<WindowScroller
  onResize={[Function]}
  onScroll={[Function]}
  scrollElement={[Window]}
  scrollingResetTimeInterval={150}
  serverHeight={0}
  serverWidth={0}
>
  <Component />
</WindowScroller>
`;

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable 4`] = `
<Table
  autoHeight={true}
  className="bdl-VirtualizedTable"
  disableHeader={false}
  estimatedRowSize={30}
  headerHeight={39}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={768}
  isScrolling={false}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={3}
  rowGetter={[Function]}
  rowHeight={52}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  scrollTop={0}
  sort={[Function]}
  style={Object {}}
  tabIndex={-1}
  width={0}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={100}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={100}
  />
</Table>
`;

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable with fixed height 1`] = `
<AutoSizer
  defaultHeight={10}
  disableHeight={true}
  disableWidth={false}
  onResize={[Function]}
  style={Object {}}
>
  <Component />
</AutoSizer>
`;

exports[`features/virtualized-table/VirtualizedTable should successfully render a VirtualizedTable with fixed height 2`] = `
<Table
  className="bdl-VirtualizedTable"
  disableHeader={false}
  estimatedRowSize={30}
  headerHeight={39}
  headerRowRenderer={[Function]}
  headerStyle={Object {}}
  height={10}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={3}
  rowGetter={[Function]}
  rowHeight={52}
  rowRenderer={[Function]}
  rowStyle={Object {}}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  sort={[Function]}
  style={Object {}}
  tabIndex={-1}
  width={0}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={100}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="description"
    defaultSortDirection="ASC"
    flexGrow={0}
    flexShrink={1}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={100}
  />
</Table>
`;
